--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -12,7 +12,12 @@
                 <a href="{% url 'details' title=info.title %}"><h5>{{ info.title }}</h5></a>
                 <p>{{ info.desc }}</p>
                 <h6>Price: ${{ info.initial_amt }}</h6>
-            </td>
+                <button type="button" class="btn btn-outline-primary">
+                    Example button
+                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"></path>
+                    </svg>
+                </button>
         </tr>
         {% endfor %}
     </table>
