--- a/assets/auctions/styles.css
+++ b/assets/auctions/styles.css
@@ -2,11 +2,58 @@ body {
     padding: 10px;
 }
 
-.img{
-    max-width:50%;
+img{
+    max-width:60%;
     height:auto;
+    margin-left:15%;
 }
 
-.glyphicon-plus{
-    color:"black";
+#img-col{
+    width: 35%;
+    float: left;
+    padding: 15px;
+    text-align: center;
+}
+
+
+
+#right-col{
+    width: 65%;
+    float: left;
+    padding: 15px;
+}
+
+a{
+    color:#563d7c;
+}
+
+a:hover{
+    color:#563d7c;
+    text-decoration-line: none;
+}
+
+.nav{
+    background-color: #563d7c;
+    margin-left: -1%;
+    margin-right: -1%;
+}
+
+.nav-link {
+    color:white;
+}
+
+.nav-link:hover{
+    color:white;
+}
+
+#user-name {
+    position: absolute;
+    top: 20px;
+    right: 16px;
+    font-size: 18px;
+}
+
+.btn-outline-primary {
+    color: #563d7c;
+    border-color: #563d7c;
 }
