--- a/static/auctions/styles.css
+++ b/static/auctions/styles.css
@@ -15,6 +15,8 @@ img{
     text-align: center;
 }
 
+
+
 #right-col{
     width: 65%;
     float: left;
@@ -49,4 +51,14 @@ a:hover{
     top: 20px;
     right: 16px;
     font-size: 18px;
-  }
+}
+
+.btn-outline-primary{
+    color: #563d7c;
+    border-color: #563d7c;
+}
+
+.btn-outline-primary:hover{
+    background-color: #563d7c;
+    border-color: #563d7c;
+}
