--- a/auctions/templates/auctions/details.html
+++ b/auctions/templates/auctions/details.html
@@ -1,16 +1,34 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    <h2>Active Listings</h2>
+    <h2>Listings</h2>
     <table>
+        <tr id="img-col">
+            <img src="{{ info.image.url }}">
+        </tr>
         <tr>
-            <td id="img-col">
-                <img src="{{ info.image.url }}">
-            </td>
             <td id="right-col">
                 <h5>{{ info.title }}</h5>
                 <p>{{ info.desc }}</p>
                 <h6>Price: ${{ info.initial_amt }}</h6>
+                {% if user.is_authenticated %}
+                    <a class="btn btn-primary btn-sm" href="#" role="button">Place bid</a>
+                    {% if del %}
+                        <a href="{% url 'watchlist_del' info.id %}" role="button" class="btn btn-outline-primary btn-sm">
+                            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"></path>
+                            </svg>
+                            Remove from Watchlist
+                        </a>
+                    {% else %}
+                        <a href="{% url 'watchlist_add' info.id %}" role="button" class="btn btn-outline-primary btn-sm">
+                            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"></path>
+                            </svg>
+                            Watchlist
+                        </a>
+                    {% endif %}
+                {% endif %}
             </td>
         </tr>
     </table>
