--- a/static/auctions/styles.css
+++ b/static/auctions/styles.css
@@ -9,8 +9,8 @@ img{
 }
 
 #img-col{
-    width: 35%;
-    float: left;
+
+    float: center;
     padding: 15px;
     text-align: center;
 }
@@ -19,7 +19,7 @@ img{
 
 #right-col{
     width: 65%;
-    float: left;
+    float: center;
     padding: 15px;
 }
 
@@ -59,6 +59,17 @@ a:hover{
 }
 
 .btn-outline-primary:hover{
+    background-color: #563d7c;
+    border-color: #563d7c;
+}
+
+.btn-primary{
+
+    border-color: #563d7c;
+    background-color: #563d7c;
+}
+
+.btn-primary:hover{
     background-color: #563d7c;
     border-color: #563d7c;
 }
