--- a/auctions/templates/auctions/details.html
+++ b/auctions/templates/auctions/details.html
@@ -19,35 +19,54 @@
                     </td>
                 </tr>
                 {% if user.is_authenticated %}
-                <form action="{% url 'bid' info.id %}" enctype="multipart/form-data" method="POST">
-                    {% csrf_token %}{% for field in amt %}{% load widget_tweaks %}
-                    <div class="form-group row">
-                        <label class="col-3 col-form-label" name="compare" for="{{ field.id_for_label }}">Your Bid: </label>
-                        <div class="col-9">
-                            {{ field |add_class:"form-control"}}
-                        </div>
-                    </div>
-                    {% endfor %}
-                    <div class="form-group row">
-                        <div class="col-sm-10">
-                            <button type="submit" class="btn btn-primary btn-sm">Place Bid</button>
-                        </div>
-                    </div>
-                </form>
-                    {% if del %}
-                        <a href="{% url 'watchlist_del' info.id %}" role="button" class="btn btn-outline-primary btn-sm">
-                            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"></path>
-                            </svg>
-                            Remove from Watchlist
-                        </a>
+                    {% if win %}
+                        <div class="alert alert-success" role="alert">
+                            <h4 class="alert-heading">You Won!</h4>
+                            <p>Congratulations on your win</p>
+                        </div>  
+                    {% elif active %}
+                        <form action="{% url 'bid' info.id %}" enctype="multipart/form-data" method="POST">
+                            {% for field in amt %}{% load widget_tweaks %}{% csrf_token %}
+                                <div class="form-group row">
+                                    <label class="col-3 col-form-label" name="compare" for="{{ field.id_for_label }}">Your Bid: </label>
+                                    <div class="col-9">
+                                        {{ field |add_class:"form-control"}}
+                                    </div>
+                                </div>
+                            {% endfor %}
+                                <div class="form-group row">
+                                    <div class="col-sm-10">
+                                        <button type="submit" class="btn btn-primary btn-sm">Place Bid</button>
+                                    </div>
+                                </div>
+                        </form>
+                        {% if del %}
+                            <a href="{% url 'watchlist_del' info.id %}" role="button" class="btn btn-outline-primary btn-sm">
+                                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"></path>
+                                </svg>
+                                Remove from Watchlist
+                            </a>
+                        {% else %}
+                            <a href="{% url 'watchlist_add' info.id %}" role="button" class="btn btn-outline-primary btn-sm">
+                                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"></path>
+                                </svg>
+                                Watchlist
+                            </a>
+                        {% endif %}
+                        {% if owner %}
+                            <a href="{% url 'close_bid' info.id %}" role="button" class="btn btn-outline-primary btn-sm">
+                                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"></path>
+                                </svg>
+                                Close Bid
+                            </a>
+                        {% endif %}
                     {% else %}
-                        <a href="{% url 'watchlist_add' info.id %}" role="button" class="btn btn-outline-primary btn-sm">
-                            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"></path>
-                            </svg>
-                            Watchlist
-                        </a>
+                        <div class="alert alert-success" role="alert">
+                            <h4 class="alert-heading">Bid Closed</h4>
+                        </div>  
                     {% endif %}
                 {% endif %}
             </td>
