--- a/assets/auctions/styles.css
+++ b/assets/auctions/styles.css
@@ -9,8 +9,8 @@ img{
 }
 
 #img-col{
-    width: 35%;
-    float: left;
+
+    float: center;
     padding: 15px;
     text-align: center;
 }
@@ -19,7 +19,7 @@ img{
 
 #right-col{
     width: 65%;
-    float: left;
+    float: center;
     padding: 15px;
 }
 
@@ -36,6 +36,7 @@ a:hover{
     background-color: #563d7c;
     margin-left: -1%;
     margin-right: -1%;
+    text-align:center;
 }
 
 .nav-link {
@@ -53,7 +54,23 @@ a:hover{
     font-size: 18px;
 }
 
-.btn-outline-primary {
+.btn-outline-primary{
     color: #563d7c;
+    border-color: #563d7c;
+}
+
+.btn-outline-primary:hover{
+    background-color: #563d7c;
+    border-color: #563d7c;
+}
+
+.btn-primary{
+
+    border-color: #563d7c;
+    background-color: #563d7c;
+}
+
+.btn-primary:hover{
+    background-color: #563d7c;
     border-color: #563d7c;
 }
