--- a/auctions/templates/auctions/all_listings.html
+++ b/auctions/templates/auctions/all_listings.html
@@ -1,12 +1,14 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    <h2>All Listings</h2>
+    <h2 style="text-align:center">All Listings</h2>
     <table>
         {% for all in product %}
         <tr>
             <td id="img-col">
-                <a href="{% url 'details' all.id %}"><img src="{{ all.image.url }}"></a>
+                {% if all.image %}
+                    <a href="{% url 'details' all.id %}"><img src="{{ all.image.url }}"></a>
+                {% endif %}
             </td>
             <td id="right-col">
                 <a href="{% url 'details' all.id %}"><h5>{{ all.title }}</h5></a>
