--- a/auctions/templates/auctions/login.html
+++ b/auctions/templates/auctions/login.html
@@ -1,8 +1,8 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-
-    <h2>Login</h2>
+    <div class="container">
+    <h2 style="text-align:center">Login</h2>
 
     {% if message %}
         <div>{{ message }}</div>
@@ -20,5 +20,5 @@
     </form>
 
     Don't have an account? <a href="{% url 'register' %}">Register here.</a>
-
+</div>
 {% endblock %}
