--- a/auctions/templates/auctions/register.html
+++ b/auctions/templates/auctions/register.html
@@ -1,8 +1,8 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-
-    <h2>Register</h2>
+<div class="container">
+    <h2 style="text-align:center" >Register</h2>
 
     {% if message %}
         <div>{{ message }}</div>
@@ -27,4 +27,5 @@
 
     Already have an account? <a href="{% url 'login' %}">Log In here.</a>
 
+</div>
 {% endblock %}
